# molbox

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: create_o2_box.py  o2_box.lmpdat  o2_box.mol
src/molbox/: __init__.py  box.py  lammps_data.py  molbox.py  rdkit_helpers.py
tests/: test_box.py  test_molbox.py  test_rdkit_3d_ops.py  test_rdkit_helpers.py
