[tool.poetry]
name = "molbox"
version = "0.1.0"
description = ""
authors = ["Niklas Kappel <niklas.kappel@kit.edu>"]
readme = "README.md"
packages = [{ include = "molbox", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
rdkit = "^2023.9.5"
scipy = "^1.13.0"
openbabel-wheel = "^3.1.1.19"
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.ruff]
extend-select = ["I"]

[tool.pyright]
reportAttributeAccessIssue = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
